add questionaire component and its implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,1 @@
-
-<div class="row">
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="name">Do you have allergies?</label>
-            <input type="boolean" class="form-control" id="usr">
-        </div>
-    </div>
-    <div>
-        <label>General questions</label>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="name">What is your gender?</label>
-            <select class="form-control" id="gen">
-                <option value="">Gender</option>
-                <option>Female</option>
-                <option>Male</option>
-                <option>Transgender</option>
-            </select>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="date">What is your date of birth?</label>
-            <input type="date" class="form-control">
-        </div>
-    </div>
-
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="date">What is your country of birth?</label>
-            <input type="string" class="form-control">
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="date">What is your marital status?</label>
-            <input type="string" class="form-control">
-        </div>
-    </div>
-    <label>Intoxications</label>
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="date">Do you smoke?</label>
-            <input type="string" class="form-control">
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <label for="date">What is your marital status?</label>
-            <input type="string" class="form-control">
-        </div>
-    </div>
-</div>
+<app-questionnaire></app-questionnaire>
